<resources>
    <string name="app_name">Ipo</string>
    <string name="title_deals">Deals</string>
    <string name="title_page_deals">Deals</string>
    <string name="title_page_courses">Courses</string>
    <string name="title_page_ipo">IPO</string>
    <string name="title_page_news">News</string>
    <string name="title_page_settings">Account</string>
    <string name="title_item_deal_risk">Risk:</string>
    <string name="title_fragment_deals_tab_favorite" translatable="false"></string>
    <string name="title_fragment_deals_tab_ipo">IPO</string>
    <string name="title_fragment_deals_tab_spac">SPAC</string>
    <string name="title_fragment_deals_tab_stocks">Stocks</string>

    <string name="btn_text_item_loading_error">Retry</string>
    <string name="text_item_loading_error">Loading error</string>
    <string name="text_item_empty">No data</string>

    <string name="text_chip_open_deal">Open deal</string>
    <string name="text_chip_averaged_deal">Averaged deal</string>
    <string name="text_chip_closed_deal">Closed deal</string>

    <string name="text_low_risk_deal">Low risk</string>
    <string name="text_medium_risk_deal">Medium risk</string>
    <string name="text_high_risk_deal">High risk</string>

    <string name="text_deal_number" translatable="false">#%s</string>
    <string name="text_deal_date" translatable="false">%s • %s</string>

    <string name="text_btn_deal_statistic">Statistic</string>
    <string name="title_locked_deal">"%s deals
locked"</string>
    <string name="title_locked_deal_ipo">IPO</string>
    <string name="title_locked_deal_spac">SPAC</string>
    <string name="title_locked_deal_stocks">Stock</string>

    <string name="hint_locked_deal_statistic">But you can see statistic</string>
    <string name="text_locked_deal_description">To see this deal you have to buy subscription for it</string>
    <string name="text_locked_deal_buy_description">Get access</string>
    <string name="text_locked_deal_buy_price" translatable="false">%d ₽</string>
    <string name="hint_onboarding_login">Create new account or login</string>
    <string name="text_btn_onboarding_login">Login</string>
    <string name="title_login">Login</string>
    <string name="hint_login_phone" translatable="false">+7 999 123–45–67</string>
    <string name="text_btn_login_send_code">Send code</string>
    <string name="text_btn_login_confirmation_next">Next</string>
    <string name="text_btn_login_confirmation_resend_code">Resend code</string>

    <string name="text_quiz_step" translatable="false">%d / 7</string>
    <string name="text_btn_quiz_next">Next</string>
    <string name="text_btn_quiz_skip">Take quiz later</string>
    <string name="hint_login_phone_number_enter">Enter your phone number</string>
    <string name="text_checkbox_terms_descriptions">I accept terms and conditions</string>
    <string name="text_login_confirmation_phone_number">Code sent to number %s</string>
    <string name="hint_login_confirmation_card">Enter 4 digit code</string>
    <string name="hint_quiz_age">How old are you?</string>
    <string name="hint_age_reminder">You must be 18 or older!</string>
    <string name="title_quiz">Quiz</string>
    <string name="hint_quiz_experience">What is your investment experience?</string>
    <string name="quiz_experience_no">No</string>
    <string name="quiz_experience_less_year">Less 1 year</string>
    <string name="quiz_experience_one_three">1 – 3 years</string>
    <string name="quiz_experience_more_three">More 3 years</string>
    <string name="hint_quiz_fund">How much capital do you have</string>
    <string name="text_quiz_fund_1">Less $10 000</string>
    <string name="text_quiz_fund_2">$10 000 – $50 000</string>
    <string name="text_quiz_fund_3">$50 000 – $250 000</string>
    <string name="text_quiz_fund_4">More $250 000</string>
    <string name="hint_quiz_target">What is your main goal of working with the stock market?</string>
    <string name="hint_quiz_target_choice">Select option…</string>
    <string name="text_quiz_card_profitablity_1" translatable="false">15%</string>
    <string name="text_quiz_card_profitablity_2" translatable="false">25%</string>
    <string name="text_quiz_card_profitablity_3" translatable="false">50%</string>
    <string name="text_quiz_card_profitablity_4" translatable="false">100%</string>
    <string name="text_quiz_card_profitablity_5">More 100%</string>
    <string name="text_quiz_card_risk_1">Less 5%</string>
    <string name="text_quiz_card_risk_2">Up to 25%</string>
    <string name="text_quiz_card_risk_4">Up to 50%</string>
    <string name="text_quiz_card_risk_5">Up to 100%</string>
    <string name="hint_quiz_tools">What tools are you interested in?</string>
    <string name="text_quiz_tools_check_1">Bonds</string>
    <string name="text_quiz_tools_check_2">Stocks</string>
    <string name="text_quiz_tools_check_3">Futures</string>
    <string name="text_quiz_tools_check_4">Options</string>
    <string name="text_quiz_tools_check_5">IPO</string>
    <string name="text_quiz_tools_check_6">Pre-IPO</string>
    <string name="text_quiz_tools_check_7">SPAC</string>
    <string name="text_quiz_tools_check_8">Resources</string>
    <string name="hint_quiz_profitability">Specify the target level of annual return on the portfolio</string>
    <string name="hint_quiz_risk">Indicate the level of risk with which you are willing to work</string>
    <string name="title_statistic">Statistic</string>
    <string name="title_statistic_card">Portfolio growth</string>
    <string name="text_statistic_period_day">Day</string>
    <string name="text_statistic_period_week">Week</string>
    <string name="text_statistic_period_month">Month</string>
    <string name="text_statistic_period_year">Year</string>
    <string name="text_statistic_period_all">All</string>
    <string name="text_item_portfolio_header_date">Date</string>
    <string name="text_item_portfolio_header_name">IPO</string>
    <string name="text_item_portfolio_header_profit_percent">Profit %</string>
    <string name="text_item_portfolio_header_profit">Result</string>
    <string name="text_item_portfolio_profit_percent" translatable="false">%d%%</string>
    <string name="text_item_portfolio_profit" translatable="false">$%d</string>
    <string name="text_btn_payment">Pay</string>
    <string name="text_payment_amount_text">Amount to be paid</string>
    <string name="title_payment">Purchasing %s</string>
    <string name="title_payment_section">a section</string>
    <string name="title_payment_course">a course</string>
    <string name="hint_payment_card_date">Date</string>
    <string name="hint_payment_card_name">Card holder name</string>
    <string name="hint_payment_card_number">Card number</string>
    <string name="hint_payment_card_cvv" translatable="false">CVV</string>
    <string name="text_btn_payment_status_ok">Good!</string>
    <string name="text_btn_payment_status_error">Retry</string>
    <string name="text_payment_status_ok">Payment was successful!</string>
    <string name="text_payment_status_error">Payment error occurred!</string>
    <string-array name="text_quiz_target_options">
        <item>Savings</item>
        <item>Basic income</item>
        <item>Additional income</item>
    </string-array>

</resources>