<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_deals_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/colorPrimaryBackground">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        style="@style/Theme.Ipo.AppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:background="@color/colorPrimaryBackground"
        app:elevation="0dp">

        <FrameLayout
            android:id="@+id/appbar_title_layout"
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_statistic"
                style="@style/Theme.Ipo.Button.IconOnly.Filled"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="start|center_vertical"
                android:layout_marginStart="@dimen/margin_default"
                app:icon="@drawable/ic_statistic"
                app:iconSize="16dp"
                app:iconTint="@android:color/white"
                app:shapeAppearanceOverlay="@style/Theme.Ipo.LightCornerView" />

            <TextView
                android:id="@+id/appbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/title_deals"
                android:textAppearance="@style/TextAppearance.Theme.Ipo.Headline2" />

        </FrameLayout>

        <com.google.android.material.card.MaterialCardView
            style="@style/Theme.Ipo.TabsCard"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginTop="@dimen/gutter_default"
            android:layout_marginEnd="@dimen/margin_default">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorAccent"
                app:tabGravity="center"
                app:tabIndicator="@drawable/ic_tab_indicator"
                app:tabIndicatorColor="@android:color/white"
                app:tabIndicatorGravity="center"
                app:tabIndicatorHeight="48dp"
                app:tabInlineLabel="true"
                app:tabMinWidth="72dp"
                app:tabMode="scrollable"
                app:tabPaddingEnd="@dimen/margin_default"
                app:tabPaddingStart="@dimen/margin_default"
                app:tabTextAppearance="@style/TextAppearance.Theme.Ipo.Paragraph.Bold">

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tab_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/ic_faved_deal"
                    android:text="@string/title_fragment_deals_tab_favorite" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tab_ipo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_fragment_deals_tab_ipo" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tab_spac"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_fragment_deals_tab_spac" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tab_stocks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_fragment_deals_tab_stocks"
                    tools:icon="@drawable/ic_locked_section" />

            </com.google.android.material.tabs.TabLayout>

        </com.google.android.material.card.MaterialCardView>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>